<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp"
    tools:context="com.internship.ocrnexa.CameraActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.internship.ocrnexa.customview.BoundingBoxOverlay
        android:id="@+id/boundingBoxOverlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/viewFinder"
        app:layout_constraintEnd_toEndOf="@id/viewFinder"
        app:layout_constraintStart_toStartOf="@id/viewFinder"
        app:layout_constraintTop_toTopOf="@id/viewFinder" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvInferenceTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins"
            android:lines="1"
            android:padding="16dp"
            android:text="@string/scan_label"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivBackNavs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:paddingTop="16dp"
            android:src="@drawable/backnavs" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@color/white"
        android:paddingTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/cameraDesc"
            android:textSize="14sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabCapture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/scan"
            android:src="@drawable/camera" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/gallery"
            android:src="@drawable/bx_photo_album" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabFlashlight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="64dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/flashlight"
            android:src="@drawable/flashlight_svgrepo_com" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
